# devices_pkg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_workspace.sh  pull_sdk.sh
install/: local_setup.sh  setup.sh
launch/: x_hand_brushed_launch.py  xhand_launch.py  yhand_launch.py  yhand_m1_launch.py
log/: latest_build
msg/: YHandMsg.msg
msg/WBot/: WBotCollision.msg  WBotMotor.msg  WBotMotorTem.msg
msg/types/: Battery.msg  IMU.msg  LED.msg  Pressure.msg  Pretighten.msg  WBottem.msg
src/E_Bot_Node/: E_Bot_Node.hpp
src/IO_Board_Node/: IO_Board_Node.cpp  IO_Board_Node.h
src/W_Bot_Double_Node/: Test_W_Bot_Double_Node.cpp  Test_W_Bot_Double_Node.hpp  W_Bot_Double_Node.hpp
src/W_Bot_Node/: Test_W_Bot_Node.cpp  Test_W_Bot_Node.hpp  W_Bot_Node.cpp  W_Bot_Node.hpp  readme.md
src/X_Hand_Brushed_Node/: Test_X_Hand_Brushed_Node.cpp  Test_X_Hand_Brushed_Node.hpp  X_Hand_Brushed_Node.hpp
src/X_Hand_Node/: Test_X_Hand_Node.hpp  X_Hand_Node.cpp
src/Y_Hand_M1_Node/: Test_Y_Hand_M1_Node.cpp  Test_Y_Hand_M1_Node.hpp  Y_Hand_M1_Node.cpp  Y_Hand_M1_Node.hpp
src/Y_Hand_Node/: Test_Y_Hand_Node.cpp  Y_Hand_Node.hpp
src/devices_pkg/: CMakeLists.txt  package.xml
src/devices_pkg/launch/: launch.py  launch_wbot_test.py  multinode_launch.py  wbot_launch.py  wbotdouble_launch.py  xhand_launch.py  yhand_launch.py
src/devices_pkg/msg/: EBotMsg.msg  IOBoardMsg.msg  Remote.msg  WBotLED.msg  WBotMsg.msg  XHandBrushedMsg.msg  XHandMsg.msg  XHandSensorMsg.msg
src/devices_pkg/msg/WBot/: WBotBattery.msg  WBotCollision.msg  WBotIMU.msg  WBotLED.msg
src/devices_pkg/msg/WBotDouble/: WBotDoubleMotor.msg
src/devices_pkg/msg/types/: Battery.msg  IMU.msg  LED.msg  Motor.msg  Pressure.msg
src/devices_pkg/src/: Test_Node.cpp  Test_Node.hpp  Test_Wbot_Node.cpp  Test_Wbot_Node.hpp
src/devices_pkg/src/E_Bot_Node/: E_Bot_Node.hpp
src/devices_pkg/src/IO_Board_Node/: IO_Board_Node.h
src/devices_pkg/src/W_Bot_Double_Node/: Test_W_Bot_Double_Node.hpp  W_Bot_Double_Node.cpp
src/devices_pkg/src/W_Bot_Node/: Remote_Node.cpp  Remote_Node.hpp  Test_W_Bot_Node.hpp  W_Bot_Node.cpp  W_Bot_Node.hpp
src/devices_pkg/src/X_Hand_Brushed_Node/: X_Hand_Brushed_Node.cpp
src/devices_pkg/src/X_Hand_Node/: Test_X_Hand_Node.cpp  Test_X_Hand_Node.hpp  X_Hand_Node.cpp  X_Hand_Node.hpp
src/devices_pkg/src/Y_Hand_Node/: Test_Y_Hand_Node.cpp  Test_Y_Hand_Node.hpp  Y_Hand_Node.cpp  Y_Hand_Node.hpp
src/devices_pkg/src/project/: Test_Node.cpp
src/devices_pkg/src/project/E_Bot_Node/: E_Bot_Node.cpp  E_Bot_Node.hpp
src/devices_pkg/src/project/W_Bot_Node/: W_Bot_Node.hpp
src/devices_pkg/src/project/X_Hand_Node/: X_Hand_Node.cpp  X_Hand_Node.hpp
src/devices_pkg/src/project/Y_Hand_Node/: Y_Hand_Node.cpp  Y_Hand_Node.hpp
